      (Robert Collins)

    * Fix the test HTTPServer to be isolated from chdir calls made while it is
      running, allowing it to be used in blackbox tests. (Robert Collins)

    * The branch interface tests were invalid for branches using subtree
      repositories by default. This has been fixed. (Robert Collins)

  INTERNALS:

    * New module ``tools/package_mf.py`` provide custom module finder for
      python packages (improves standard python library's modulefinder.py)
      used by ``setup.py`` script while building standalone bzr.exe.
      (Alexander Belchenko)

    * New remote method ``RemoteBzrDir.find_repositoryV2`` adding support for
      detecting external lookup support on remote repositories. This method is
      now attempted first when lookup up repositories, leading to an extra 
      round trip on older bzr smart servers. (Robert Collins)
 
    * Repository formats have a new supported-feature attribute
      ``supports_external_lookups`` used to indicate repositories which support
      falling back to other repositories when they have partial data.
      (Robert Collins)

    * The bzrdir format registry now accepts an ``alias`` keyword to
      register_metadir, used to indicate that a format name is an alias for
      some other format and thus should not be reported when describing the
      format. (Robert Collins)


bzr 1.2 2008-02-15
------------------

  BUG FIXES:

    * Fix failing test in Launchpad plugin. (Martin Pool)


bzr 1.2rc1 2008-02-13
---------------------

  NOTES WHEN UPGRADING:
  
    * Fetching via the smart protocol may need to reconnect once during a fetch
      if the remote server is running Bazaar 1.1 or earlier, because the client
      attempts to use more efficient requests that confuse older servers.  You
      may be required to re-enter a password or passphrase when this happens.
      This won't happen if the server is upgraded to Bazaar 1.2.
      (Andrew Bennetts)

  CHANGES:
