@@ -68,6 +68,9 @@ IN DEVELOPMENT
 
   INTERNALS:
 
+    * ``bzrlib.bzrdir.BzrDir.sprout`` now accepts ``shallow`` to control
+      creating shallow branches. (Robert Collins)
+
     * New module ``tools/package_mf.py`` provide custom module finder for
       python packages (improves standard python library's modulefinder.py)
       used by ``setup.py`` script while building standalone bzr.exe.
